<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardElevation="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nome"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/duration"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/gender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    android:textSize="20sp"/>


                <CheckBox
                    android:id="@+id/checkboxFlag"
                    android:layout_width="176dp"
                    android:layout_height="wrap_content"
                    android:text="@string/flag" />
            </LinearLayout>

            <ImageView
                android:id="@+id/fav_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>